# CrowdVision

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: ablation_affinity_fixed.yaml  ablation_affinity_none.yaml  ablation_affinity_random.yaml  ablation_affinity_uniform.yaml  ablation_attention_full.yaml  ablation_attention_linformer.yaml  ablation_fixed_scale_2_4.yaml  ablation_fixed_scale_2_4_8.yaml  ablation_fixed_scale_4_8_16.yaml  ablation_fusion_concat_only.yaml  ablation_fusion_full_cross_attention.yaml  ablation_fusion_graph_only.yaml  ablation_fusion_performer_only.yaml  ablation_no_both_losses.yaml  ablation_no_global_fusion_encoder.yaml  ablation_no_temporal_loss.yaml  ablation_no_view_loss.yaml  ablation_views_fixed.yaml  ablation_views_pyramid.yaml  ablation_views_single.yaml  ablation_views_two.yaml  base.yaml
configs/datasets/: kinetics400.yaml  kinetics600.yaml  kinetics700.yaml  publicpark.yaml  shanghaitech.yaml  ucf101.yaml  xdviolence.yaml
scripts/: benchmark_fps.py  evaluate.py  export_onnx.py  make_manifest.py  train.py
src/crowdvit/: __init__.py  config.py
src/crowdvit/cli/: __init__.py  benchmark_fps.py  common.py  evaluate.py  export_onnx.py  make_manifest.py  train.py
src/crowdvit/data/: __init__.py  dataset_registry.py  manifest_dataset.py  transforms.py  (+1 more)
tests/: conftest.py  test_cli_common.py  test_config.py  test_data_pipeline.py  test_flops_scaling.py  test_fusion_variants.py  test_kga.py  test_losses.py  test_model_forward.py  test_performer_attention.py  test_tubelet.py
(+26 files in other folders)
