[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdvit"
version = "0.1.0"
description = "CrowdViT: A Multi-Scale Performer-Graph Transformer for Efficient Real-Time Video Action Recognition"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "The CrowdViT Authors" }]
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "tensorboard>=2.14",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
video = ["decord>=0.6.0", "av>=11.0.0"]
export = ["onnx>=1.15", "onnxruntime>=1.16"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "black>=24.1"]

[project.scripts]
crowdvit-train = "crowdvit.cli.train:main"
crowdvit-eval = "crowdvit.cli.evaluate:main"
crowdvit-benchmark = "crowdvit.cli.benchmark_fps:main"
crowdvit-export = "crowdvit.cli.export_onnx:main"
crowdvit-make-manifest = "crowdvit.cli.make_manifest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
